fix: provision Android SDK and ensure compatibility with older devices